[build-system]
requires = [
  "setuptools >= 41.0",
  "wheel",
  "apsw-wheels",
  "msgpack",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | \venv
  | _build
  | build
  | dist
)/
'''
