[metadata]
name = rapid_dev_storage
version = attr: rapid_dev_storage.__version__
description = Probably, a dumb idea
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = mikeshardmind
author_email = michael@michaelhall.tech
url = https://github.com/mikeshardmind/rapid_dev_storage

[options]
packages = rapid_dev_storage
python_requires = >=3.8
install_requires = 
  apsw-wheels
  msgpack

[flake8]
ignore =
  E203
  E302
  E501
  E704
  W503
exclude = 
  .git
  __pycache__
  .stubs
  .mypy_cache
  .venv
  venv
max-line-length = 88

[isort]
# black compatibility
include_trailing_comma=True
use_parentheses=True
multi_line_output=3
force_grid_wrap=0
line_length=88

known_third_party=apsw,msgpack
lines_between_types=1
